syntax = "proto3";

package farming;

// Service definition: UV Light monitoring service
service UvLightMonitoringService {
  // Bidirectional streaming RPC for UV Light monitoring
  rpc MonitorUvLight (stream UvLightRequest) returns (stream UvLightResponse);
}

// Request message for UV Light monitoring
message UvLightRequest {
  // Location of the crop field (i.e.: field: A or B)
  string location = 1;

  // Crop type (Rice, Wheat, Corn, etc...)
  string crop_type = 2;
}

// Response message for UV Light monitoring
message UvLightResponse {
  // UV Level received by the crops
  float uv_level = 1; 

  // Indicates if the UV levels are sufficient based on the specified crop type
  bool is_uv_sufficient = 2;
}
